<resources>
    <!--toolbar/Common-->
    <string name="app_name">RecSound</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_toolbar">RecSound</string>
    <string name="version">1.0.0</string>
    <string name="tutorial_text1">Es una grabadora en segundo plano.\n
        Configurala a tu gusto. Para renombrar\n
        mantén pulsado el mp3 y para grabar\n
        debes pulsar el botón de apagado.\n
        Por defecto, 3 veces\n

    </string>
    <string name="tutorial_not_show_more">No volver a mostrar</string>
    <string name="tutorial_button">Continuar</string>
    <!--chooser-->
    <string name="chooser_audio">Compartir audio</string>

    <!--Main-->
    <string name="main_text">Pulsa 3 veces segidas el botón de apagado\npara activar/desactivar la grabación en segundo plano</string>
    <string name="main_button_activated">Grabar</string>
    <string name="main_button_disactived">Grabando</string>

    <!--Settings-->
    <string name="settings_version_text">Versión</string>
    <string name="settings_service_text">Servicio</string>
    <string name="settings_service_actived">Activado</string>
    <string name="settings_service_disactived">Desactivado</string>
    <string name="settings_power">Pulsaciones</string>
    <string name="settings_time_title">Tiempo</string>
    <string name="settings_time_descriptión">*Transcurridos los minutos, la grabación se detendrá automáticamente</string>
    <string name="settings_notification">Notificar</string>
    <string name="settings_vibrate">Vibrar</string>
    <string name="settings_tutorial">Tutorial</string>

    <!--Item-->
    <string name="item_title">Título</string>
    <string name="item_date">Fecha</string>
    <string name="empty_activity">No tienes archivos de audio</string>

    <!--AlertDialog-->
    <string name="alert_dialog_erase_title">Borrar</string>
    <string name="alert_dialog_erase_message">¿Desea borrar el audio?</string>
    <string name="alert_dialog_rename_title">Renombrar</string>
    <string name="alert_dialog_cancel">Cancelar</string>
    <string name="alert_dialog_accept">Aceptar</string>
    <string name="alert_dialog_yes">Si</string>
    <string name="alert_dialog_no">No</string>

    <!--Toast-->
    <string name="toast_permision_not_permited">Debes de aceptar los permisos</string>
    <string name="toast_edit_text_empty">Introduce el valor correspondiente</string>
    <string name="toast_renamed">Fichero renombrado</string>
    <string name="toast_delete_true">Fichero eliminado</string>
    <string name="toast_delete_false">No se puedo eliminar el fichero</string>
    <string name="title_activity_settings">Settings</string>
    <string name="toast_number_less"></string>
    <string name="toast_restart_app">Reinicia la aplicación</string>


</resources>
