<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sharp"
    tools:context="project.recsound.modules.main.MainActivity">

    <include layout="@layout/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/layout_toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_below="@+id/layout_toolbar">

        <RelativeLayout
            android:id="@+id/main_empty_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/empty"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/imageView3" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/empty_activity"
                android:textSize="14sp"
                android:layout_below="@+id/imageView3"
                android:layout_centerHorizontal="true"
                android:id="@+id/main_empty_text" />

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/main_recicler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true" />

        <RelativeLayout
            android:id="@+id/main_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ProgressBar
                android:layout_width="83dp"
                android:layout_height="83dp" />

        </RelativeLayout>

        </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_tutorial_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:visibility="visible">

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/tutorial_button"
            android:textColor="@android:color/white"
            android:background="@drawable/ripple_button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/main_tutorial_button" />

        <CheckBox
            android:layout_marginBottom="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/tutorial_not_show_more"
            android:id="@+id/main_tutorial_checkbox"
            android:layout_above="@+id/main_tutorial_button"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/tutorial_text1"
            android:textAlignment="center"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/main_tutorial_text" />

        <ImageView
            android:layout_margin="45dp"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/empty"
            android:id="@+id/imageView4"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:textSize="23sp"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_below="@+id/imageView4"
            android:layout_centerHorizontal="true"
            android:id="@+id/main_tutorial_title" />


    </RelativeLayout>

</RelativeLayout>