<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="project.recsound.modules.settings.SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:id="@+id/relative_power"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/settings_power_icon"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/imageView" />

                <TextView
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_power"
                    android:id="@+id/textView4"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/imageView"
                    android:layout_toEndOf="@+id/imageView"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="100dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/shadow_line"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/view"
                    />

                <LinearLayout
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginEnd="20dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="20dp">

                    <ImageButton
                        android:id="@+id/setting_less_button"
                        android:background="@drawable/settings_less_icon"
                        android:layout_marginEnd="24sp"
                        android:layout_marginRight="23dp"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        />

                    <TextView
                        android:id="@+id/settings_number_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:text="2"/>

                    <ImageButton
                        android:id="@+id/settings_more_button"
                        android:background="@drawable/settings_more_icon"
                        android:layout_marginStart="23dp"
                        android:layout_marginLeft="23dp"
                        android:layout_width="17dp"
                        android:layout_height="17dp"
                        />

                </LinearLayout>


            </RelativeLayout>
            <RelativeLayout
                android:orientation="vertical"
                android:id="@+id/relative_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/settings_clock_icon"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/imageView5" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="100dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/shadow_line"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/view5"
                    />


                <LinearLayout
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="20dp"
                    android:id="@+id/linearLayout2">

                    <ImageButton
                        android:id="@+id/settings_time_less_button"
                        android:background="@drawable/settings_less_icon"
                        android:layout_marginEnd="23dp"
                        android:layout_marginRight="23dp"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        />

                    <TextView
                        android:id="@+id/settings_time_number_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:text="5"/>

                    <ImageButton
                        android:id="@+id/settings_time_more_button"
                        android:background="@drawable/settings_more_icon"
                        android:layout_marginStart="23dp"
                        android:layout_marginLeft="23dp"
                        android:layout_width="17dp"
                        android:layout_height="17dp"
                        />

                </LinearLayout>

                <TextView
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:text="@string/settings_time_title"
                    android:id="@+id/main_tutorial_title"
                    android:layout_alignParentTop="true"
                    android:layout_alignLeft="@+id/view5"
                    android:layout_alignStart="@+id/view5"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_time_descriptión"
                    android:textSize="10sp"
                    android:layout_marginTop="35dp"
                    android:layout_marginBottom="20dp"
                    android:layout_below="@+id/imageView5"
                    android:layout_alignLeft="@+id/main_tutorial_title"
                    android:layout_alignStart="@+id/main_tutorial_title"
                    android:id="@+id/textView11"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp" />


            </RelativeLayout>



            <RelativeLayout
                android:orientation="vertical"
                android:id="@+id/relative_notification"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/settings_notification_icon"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/imageView2" />

                <TextView
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_notification"
                    android:id="@+id/textView5"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/imageView2"
                    android:layout_toEndOf="@+id/imageView2"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="100dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/shadow_line"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/view2"
                    />

                <Switch
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_sitch_notification"
                    android:layout_alignBaseline="@+id/textView5"
                    android:layout_alignBottom="@+id/textView5"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                     />

            </RelativeLayout>

            <RelativeLayout
                android:orientation="vertical"
                android:id="@+id/relative_vibrate"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/settings_vibrate_icon"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/imageView3" />

                <TextView
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_vibrate"
                    android:id="@+id/textView6"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/imageView3"
                    android:layout_toEndOf="@+id/imageView3"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="100dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/shadow_line"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/view6"
                    />

                <Switch
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_sitch_vibrate"
                    android:layout_alignBaseline="@+id/textView6"
                    android:layout_alignBottom="@+id/textView6"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:orientation="vertical"
                android:id="@+id/relative_tutorial"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/settings_tutorial_icon"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/imageView4" />

                <TextView
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_tutorial"
                    android:id="@+id/main_tutorial_text"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/imageView4"
                    android:layout_toEndOf="@+id/imageView4"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="100dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/shadow_line"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/view7"
                    />

                <Switch
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_sitch_tutorial"
                    android:layout_alignBaseline="@+id/main_tutorial_text"
                    android:layout_alignBottom="@+id/main_tutorial_text"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    />

            </RelativeLayout>


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/shadow_line"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/settings_version_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_alignBaseline="@+id/textView"
                android:layout_alignBottom="@+id/textView"
                android:layout_toRightOf="@+id/textView"
                android:layout_toEndOf="@+id/textView"
                android:text="@string/version"
                android:id="@+id/textView2"
                android:layout_marginLeft="40dp" />

            <TextView
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/settings_service_text"
                android:layout_below="@+id/textView"
                android:id="@+id/textView3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="actived/disactived"
                android:layout_alignBaseline="@+id/textView3"
                android:layout_alignBottom="@+id/textView3"
                android:layout_alignLeft="@+id/textView2"
                android:layout_alignStart="@+id/textView2"
                android:id="@+id/settings_service" />


        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>
